fix(table): Fix text overflow on cells

--- a/packages/orion/src/Table/table.css
+++ b/packages/orion/src/Table/table.css
@@ -58,10 +58,14 @@
 }
 
 .orion.table tbody > tr > td > .inner-cell {
-  @apply bg-white flex items-center truncate;
+  @apply bg-white flex items-center;
   @apply border-t-1 border-b-1 border-gray-900-8;
   @apply px-12 mt-8;
   height: 54px;
+}
+
+.orion.table tbody .inner-cell > .inner-cell-wrapper {
+  @apply truncate;
 }
 
 .orion.table tbody .inner-cell.highlight > .inner-cell-wrapper {
